[metadata]
name = tulp
version = attr: tulp.version.VERSION
description = TULP: A command line tool, in the best essence of POSIX tooling, that will help you to **process**, **filter**, and **create** data in this new Artificial Intelligence world.
long_description = file: README.md
long_description_content_type = text/markdown
author = Federico Nuñez
author_email = fedenunez@gmail.com
url = https://github.com/fedenunez/tulp
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: GNU General Public License v2 (GPLv2)
  Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7.1
zip_safe = True
include_package_data = True
install_requires =
  openai >= 0.27.0

[options.entry_points]
console_scripts =
  tulp = tulp.tulp:run

#[options.package_data]
#  tulp = py.typed

[options.packages.find]
exclude =
  tests
  tests.*

